--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DATABASE_URL=postgresql://neondb_owner:your_password@your-neon-host.neon.tech/ne
 SECRET_KEY=your-secret-key-change-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
 
 # CORS
 ALLOWED_ORIGINS=http://localhost:19006,exp://192.168.1.100:8081
