--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,11 @@ REFRESH_TOKEN_EXPIRE_DAYS=7
 # CORS
 ALLOWED_ORIGINS=http://localhost:19006,exp://192.168.1.100:8081
 
-# Cloudinary (optional)
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
+CLOUDINARY_URL=cloudinary://your-api-key:your-api-secret@your-cloud-name
 
 # Email (Resend)
 RESEND_API_KEY=re_your_api_key_here
