fix(nginx): remove HTTP to HTTPS redirection and SSL configuration for cleaner proxy setup

--- a/scripts/nginx-brigada.conf
+++ b/scripts/nginx-brigada.conf
@@ -2,21 +2,7 @@ server {
     listen 80;
     server_name api.psic-danieladiaz.com;
 
-    # Redirect all HTTP to HTTPS (certbot will update this after SSL)
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name api.psic-danieladiaz.com;
-
-    # SSL — managed by certbot
-    ssl_certificate     /etc/letsencrypt/live/api.psic-danieladiaz.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.psic-danieladiaz.com/privkey.pem;
-    include             /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam         /etc/letsencrypt/ssl-dhparams.pem;
-
-    # Proxy to uvicorn
+    # Proxy to uvicorn (certbot will add SSL block automatically)
     location / {
         proxy_pass         http://127.0.0.1:8000;
         proxy_http_version 1.1;
